# tenmado

./: README.md
tenmado-0.06-win32-2/: README  README-ja-sjis  README-ja-utf8
tenmado-0.06-win32-2/doc/: ChangeLog  LICENSE  README  README-ja-sjis  README-ja-utf8  TODO
tenmado-0.06-win32-2/happy-L/image/: Makefile  Makefile.in
tenmado-0.10-src/: ChangeLog  INSTALL  LICENSE  Makefile.am  Makefile.in  README  README-ja-sjis  README-ja-utf8  THANKS  aclocal.m4  chain.c  chain.h  config.h.in  configure  configure.ac  const.h  esc-ok.c  esc-ok.h  hit-status.c  hit-status.h  icon.xpm  loop.c  loop.h  main.c  option.c  option.h  pause.c  pause.h  score.c  score.h  ship.c  ship.h  stage.c  stage.h  tenmado.6  util.c  util.h
tenmado-0.10-src/happy-L/: Makefile.am  Makefile.in  balloon.c  balloon.h  close-system.c  close-system.h  disconnection.c  disconnection.h  ending.c  ending.h  explosion.c  explosion.h  fud.c  fud.h  high-score.c  high-score.h  image.c  image.h  intuition.c  intuition.h  laser.c  laser.h  last-boss.c  last-boss.h  message.c  message.h  midnight.c  midnight.h  normal-enemy.c  normal-enemy.h  normal-shot.c  normal-shot.h  overrun.c  overrun.h  player-shot.c  player-shot.h  player.c  player.h  result.c  result.h  (+24 more)
tenmado-0.10-src/happy-L/default/: Makefile.am  Makefile.in  score-stage-1.txt  score-stage-2.txt  score-stage-3.txt  score-stage-4.txt  score-stage-5.txt  score-total.txt
tenmado-0.10-src/happy-L/image/: Makefile.am  Makefile.in
tenmado-0.10-src/libbac/: Makefile.am  Makefile.in  README  bac_array.c  bac_array.h  bac_dump.c  bac_dump.h  bac_entry.c  bac_entry.h  bac_entry_to_string.c  bac_entry_to_string.h  bac_lexical.c  bac_lexical.h  bac_lexical.l  bac_load.c  bac_load.h  bac_parser.c  bac_parser.h  bac_parser.y  bac_parser_public.h  bac_save.c  bac_save.h  bac_string_to_array.c  bac_string_to_array.h  bac_truncate.c  bac_truncate.h
tenmado-0.10-src/libtenm/: Makefile.am  Makefile.in  tenm_collision.c  tenm_collision.h  tenm_graphic.c  tenm_graphic.h  tenm_input.c  tenm_input.h  tenm_math.c  tenm_math.h  tenm_object.c  tenm_object.h  tenm_primitive.c  tenm_primitive.h  tenm_sdl_init.c  tenm_sdl_init.h  tenm_table.c  tenm_table.h  tenm_timer.c  tenm_timer.h
tenmado-0.10-src/save/: Makefile.am  Makefile.in
