# Makefile.am for tenmado/happy-L/image
# $Id: Makefile.am,v 1.7 2003/01/15 22:08:22 oohara Exp $
# process this file with automake --foreign to generate Makefile.in

EXTRA_DIST = burst-blue.png \
  burst-blue-damaged.png \
  burst-purple.png \
  burst-purple-damaged.png \
  burst-red.png \
  burst-red-damaged.png \
  disconnection-bit.png \
  disconnection-core.png \
  disconnection-core-damaged.png \
  doubt.png \
  doubt-damaged.png \
  fear.png \
  fear-damaged.png \
  font-medium.png \
  horizon-blue.png \
  horizon-blue-damaged.png \
  horizon-purple.png \
  horizon-purple-damaged.png \
  horizon-red.png \
  horizon-red-damaged.png \
  intuition.png \
  intuition-damaged.png \
  large-ball-blue.png \
  large-ball-purple.png \
  large-ball-red.png \
  last-boss-demo-0.png \
  last-boss-demo-1.png \
  last-boss-demo-2.png \
  last-boss-demo-3.png \
  last-boss.png \
  last-boss-damaged.png \
  medium-ball-blue.png \
  medium-ball-purple.png \
  medium-ball-red.png \
  midnight-bit-blue.png \
  midnight-bit-blue-damaged.png \
  midnight-bit-purple.png \
  midnight-bit-purple-damaged.png \
  midnight-bit-red.png \
  midnight-bit-red-damaged.png \
  midnight.png \
  midnight-damaged.png \
  overrun-bit-blue.png \
  overrun-bit-blue-damaged.png \
  overrun-bit-green.png \
  overrun-bit-purple.png \
  overrun-bit-purple-damaged.png \
  overrun-bit-red.png \
  overrun-bit-red-damaged.png \
  overrun.png \
  overrun-damaged.png \
  player-blue.png \
  player-purple.png \
  player-red.png \
  plenty-blue.png \
  plenty-blue-damaged.png \
  plenty-purple.png \
  plenty-purple-damaged.png \
  plenty-red.png \
  plenty-red-damaged.png \
  small-ball-blue.png \
  small-ball-purple.png \
  small-ball-red.png \
  solution.png \
  solution-damaged.png \
  sting-blue.png \
  sting-blue-damaged.png \
  sting-purple.png \
  sting-purple-damaged.png \
  sting-red.png \
  sting-red-damaged.png \
  trinity.png \
  trinity-damaged.png \
  uncertainty.png \
  uncertainty-damaged.png

install-data-local:
	$(mkinstalldirs) $(DESTDIR)$(datadir)/games/tenmado/image/
	$(INSTALL_DATA) *.png \
  $(DESTDIR)$(datadir)/games/tenmado/image/

uninstall-local:
	-rm -f $(DESTDIR)$(datadir)/games/tenmado/image/*.png
	-rmdir $(DESTDIR)$(datadir)/games/tenmado/image/
	-rmdir $(DESTDIR)$(datadir)/games/tenmado/
